fix: Fix layout issue in search dropdown

--- a/assets/style.css
+++ b/assets/style.css
@@ -550,13 +550,13 @@ footer {
 .resultsContainer {
     position: absolute;
     display: block;
-    width: 99%;
+    width: 95%;
     background-color: white;
     border: 1px solid rgba(128, 128, 128, 0.5);
 }
 
 .dropdownHeading {
-    width: 100%;
+    width: 95%;
     color: #818080;
     text-transform: uppercase;
     font-size: 0.7em;
